# doing-c-in-rust

./: Cargo.toml  build.rs
src/: lib.rs
